# agency-os-skills

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
.claude-plugin/: marketplace.json  plugin.json  versions.json
.githooks/: pre-commit
docs/: cowork-improvements.md  secrets-konvention.md
plugins/agency-os-brand/.claude-plugin/: plugin.json
plugins/agency-os-core/.claude-plugin/: plugin.json
plugins/agency-os-marketing/.claude-plugin/: plugin.json
plugins/agency-os-video/.claude-plugin/: plugin.json
plugins/brand-voice/.claude-plugin/: plugin.json
plugins/carousel/.claude-plugin/: plugin.json
plugins/github-cowork/.claude-plugin/: plugin.json
plugins/icp/.claude-plugin/: plugin.json
plugins/video-studio/.claude-plugin/: plugin.json
plugins/video-studio/skills/video-studio/: README.md  SKILL.md  pyproject.toml
plugins/video-studio/skills/video-studio/engines/hyperframes/: package.json
plugins/video-studio/skills/video-studio/engines/video-use/: .gitignore  SKILL.md  UPSTREAM.md  pyproject.toml
plugins/video-studio/skills/video-studio/engines/video-use/helpers/: broll.py  transcribe_local.py
plugins/video-studio/skills/video-studio/helpers/: transcribe.py
plugins/video-studio/skills/video-studio/references/: cut-standards.md  video-editing-workflow.md
plugins/video-studio/skills/video-studio/scripts/: doctor.sh  setup.sh
skills/agency-os-github/: SKILL.md
skills/agency-os-shutdown/: SKILL.md
skills/agency-os-start/: SKILL.md
skills/brand-voice/: SKILL.md
skills/carousel/: SKILL.md
tools/: sync-engine.sh  versions.sh
(+109 files in other folders)
