[project]
name = "video-studio"
version = "0.1.0"
description = "Conversation-driven video editor skill for Claude Code"
license = { file = "helpers/LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "requests",
    "pillow",
    "numpy",
]

[project.optional-dependencies]
animations = ["manim"]
whisper = ["faster-whisper"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
