[project]
name = "video-use"
version = "0.1.0"
description = "Conversation-driven video editor skill for Claude Code"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "requests",
    "librosa",
    "matplotlib",
    "pillow",
    "numpy",
    # Lokale Schnell-Triage (transcribe_local.py, ohne API):
    "faster-whisper",                                                        # portabel (CPU), Fallback ueberall
    "mlx-whisper; sys_platform == 'darwin' and platform_machine == 'arm64'", # nur Apple Silicon, schneller
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
